# alvorada

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: BRETHREN_TEXT_SUBMISSION_TEMPLATE.txt  CODEOWNERS  MEMBER_SUBMISSION_TEMPLATE.md  pull_request_template.md
codebooks/: core-codebook.json  example-mission-codebook.json  protocol-codebook.json
constitution/: blue-0.md  mr-gold.md  red-1.md  shared-kernel.md  sienna-4.md
dictionary/: aliases.json  canonical-dictionary.json  changelog.jsonl  conflict-types.json  register.json  status-values.json
docs/: BRETHREN_ACCESS.md  OPERATIONS.md  SUBMISSION_INTAKE.md  architecture.md  authority-model.md  compression-and-codebooks.md  conformance-model.md  lineage-and-supersession.md  roadmap.md  terminology.md  threat-model.md
profiles/: adjudication.json  implementation.json  minimal.json  research.json
schema/: odex-imx-ack-v0.2.schema.json  odex-imx-codebook-v0.1.schema.json  odex-imx-dictionary-v0.1.schema.json  odex-imx-response-v0.2.schema.json  odex-imx-state-delta-v0.1.schema.json  odex-imx-v0.2.schema.json
schemas/: asset-use.schema.json  collection.schema.json  failure-pattern.schema.json
scripts/: create_mission.py  frame_check.py  import_submission.py  validate_state.py
state/: asset-use-log.csv  current.yaml  failure-patterns.yaml
tests/: test_canonicalization.py  test_codebook.py  test_create_mission.py  test_delta_roundtrip.py  test_dictionary.py  (+6 more)
(+33 files in other folders)
